--- a/src/ui/activities/Home/Home.scss
+++ b/src/ui/activities/Home/Home.scss
@@ -42,6 +42,7 @@ padding-left: 50px;
   flex-direction: row;
   gap: 22px;
 }
+
     .navbar-brand {
       font-family: 'Lobster', cursive;
       margin-left: 190px;
@@ -93,6 +94,11 @@ padding-left: 50px;
         display: flex;
         flex-direction: row;
 
+      }
+      .para{
+        padding-left: 12px;
+        padding-top: 10px;
+        font-size: 12px;
       }
 
       .card-body {
