--- a/src/ui/activities/Home/Home.scss
+++ b/src/ui/activities/Home/Home.scss
@@ -1,8 +1,7 @@
-
 .Home {
   background-color: #fafafa;
   width: 100%;
-margin: 0;
+  margin: 0;
   padding: 0;
   overflow: hidden;
 
@@ -19,7 +18,7 @@ margin: 0;
 
     .collapse {
       .fa-facebook-messenger {
-padding-left: 50px;
+        padding-left: 50px;
         font-size: 22px;
       }
 
@@ -37,11 +36,11 @@ padding-left: 50px;
         margin-left: 250px;
       }
     }
-.icon_container{
-  display: flex;
-  flex-direction: row;
-  gap: 22px;
-}
+    .icon_container{
+      display: flex;
+      flex-direction: row;
+      gap: 22px;
+    }
 
     .navbar-brand {
       font-family: 'Lobster', cursive;
@@ -58,6 +57,22 @@ padding-left: 50px;
     gap: 100px;
     .card {
       width: 32rem;
+      .picture1{
+        border-radius: 100%;
+        height: 60px;
+        width: 60px;
+     margin-left: 20px;
+      }
+     .container1{
+       display: flex;
+       flex-direction: row;
+margin-top: 20px;
+       margin-bottom: 20px;
+     }
+      .bold{
+      padding-left: 10px;
+      margin-top: 40px;
+      }
       .card-image-top {
 
       }
@@ -85,8 +100,13 @@ padding-left: 50px;
 
       .fa-bookmark {
         margin-top: 20px;
-        margin-left: 360px;
+        margin-left: 320px;
         float: right;
+      }
+      .umar{
+        width: 60px;
+        font-size: 10px;
+        margin-top: 18px;
       }
 
       .icons {
@@ -106,6 +126,9 @@ padding-left: 50px;
           width: 100%;
           display: flex;
           flex-direction: row;
+          .card_text1{
+
+          }
         }
 
         .line {
@@ -118,6 +141,7 @@ padding-left: 50px;
 
         .card_text {
           font-family: 'Lobster', cursive;
+
         }
       }
     }
@@ -159,9 +183,9 @@ padding-left: 50px;
     }
     .uncle3 {
       text-decoration: none;
-     padding-left: 40px;
+      padding-left: 40px;
     }
-      .adnan{
+    .adnan{
       color: gray;
     }
 
@@ -170,11 +194,11 @@ padding-left: 50px;
       padding-left: 30px;
       font-size: 14px;
     }.adnan1{
-    padding-left: 35px;
-    color: gray;
-    padding-top: 20px;
-    font-size: 16px;
-         }
+       padding-left: 35px;
+       color: gray;
+       padding-top: 20px;
+       font-size: 16px;
+     }
     .uncle1{
       padding-top: 20px;
       color:black;
@@ -194,7 +218,7 @@ padding-left: 50px;
   }
 }
 @media only screen and (max-width: 1100px){
-.second{
-  display: none;
-}
+  .second{
+    display: none;
+  }
 }
