--- a/src/ui/activities/Home/Home.scss
+++ b/src/ui/activities/Home/Home.scss
@@ -46,6 +46,9 @@
       font-family: 'Lobster', cursive;
       margin-left: 190px;
     }
+    .shaheer{
+      margin-left: 50px;
+    }
   }
 
   .card_container {
